# rust

amiquip/: main.rs
amiquip-client/: Cargo.toml
amiquip-client/src/: lib.rs  main.rs  publisher.rs
amiquip-client/tests/: integration.rs
config/: Cargo.toml
config/confs/: base.yaml
config/src/: confs.rs  lib.rs  main.rs
database/elasticsearch/: Cargo.toml
database/sqlx/: rustfmt.toml
docker/: Dockerfile
docker/conf/: base.yaml
docker/scripts/: build.sh  cleanup.sh  run.sh
docker/src/: main.rs
env-logger/: Cargo.toml
env-logger/src/: console_logger.rs  lib.rs  main.rs
es-logger/: Cargo.toml
es-logger/scripts/: query.es  run_single.sh
es-logger/src/: es_logger.rs  lib.rs  logger.rs  main.rs
inject/: Cargo.toml
internals/lifetime/: Cargo.toml
internals/memory/: README.md
kube-rust/: Cargo.toml
kube-rust/src/: event_watcher.rs  lib.rs  main.rs  pod_creation.rs
log4rs/: Cargo.toml  log4rs.yaml  log4s.yaml
log4rs/src/: main.rs
memory/tests/: test_arc.rs  test_nonnull.rs  test_rc.rs
mutex/src/: main.rs
sqlx/: Cargo.toml
test-amiquip/src/: consumer.rs  main.rs
test-docker/: Cargo.toml  Dockerfile
test-docker/src/: main.rs
test-lifetime/tests/: unit_struct_lifetime.rs
test-oncecell/: Cargo.toml
test-oncecell/src/: main.rs  sync_logger.rs
test-tokio/: Cargo.toml
test-tokio/src/: lib.rs
tokio-client/src/: main.rs
tonic/: Cargo.toml  build.rs
tonic/src/: client.rs  server.rs
traits/tests/: derive_display.rs  drop.rs
webapp-zero2prod/: Cargo.toml  Dockerfile
webapp-zero2prod/src/: configuration.rs  lib.rs  (+4 more)
(+19 files in other folders)
