[package]
name = "kube-rust"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "kube-rust"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
kube = { version = "0.85.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.19.0", features = ["v1_27"] }
