[package]
name = "helloworld-tonic"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hello-server"
path = "src/server.rs"

[[bin]]
name = "hello-client"
path = "src/client.rs"

[dependencies]
prost = "0.12.1"
tonic = "0.10.2"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.10.2"
